# top_api

./: .gitignore  README.md  api.yml  data.json  docker-compose.yml  printer_fixtures.json  pyproject.toml
config/: celeryy.py  settings.py  urls.py
service/: __init__.py  admin.py  apps.py  models.py  schemas.py  serializers.py  swagger_schemas.py  tasks.py  tests.py  urls.py  views.py
service/app_services/: __init__.py  exceptions.py  file_handlers.py  utils.py
service/templates/: client.html  kitchen.html
templates/: client.html  kitchen.html
tests/: __init__.py  bases.py  conftest.py  settings.py
tests/service/: __init__.py  factories.py  test_tables.py  test_views.py
tests/service/app_services/: __init__.py  test_file_handlers.py  test_utils.py
